# Notebooks

./: .gitignore  justfile  pyproject.toml
notebooks/: basics_genai.ipynb  basics_nlp.ipynb  gpt_asns_1.ipynb  gpt_asns_2.ipynb  gpt_asns_3.ipynb  perceptron.ipynb  wave_collapse.ipynb
